--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
   </head>
   <h1>Hello HTML</h1>
   <img src="img/dog.jpeg" alt="dog">
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti quisquam minima labore animi optio eaque vitae
+    exercitationem ad, doloribus praesentium placeat alias tempore natus soluta in, cum magni? Ipsam, exercitationem?
+  </p>
+  <br>
+  <a href="https://www.facebook.com/"></a>
+  <article> Зробіть прибирання розумним з новим, потужним роботом-пилососом Rowenta X-PLORER S95. Детальніше — у відео!
+  </article>
+  <button>To buy</button>
+  <h1>Main title</h1>
+  <h2>Subtitle</h2>
+  <h3>Details</h3>
+  <h4>Gallery</h4>
+  <h5>History</h5>
+  <h6>Contacts</h6>
+
+  <em>Quotes</em>
+  <stron>Important info</stron>
+  <nav>
+    <ul>
+      <li>About us</li>
+      <li>History</li>
+      <li>Gallery</li>
+      <li>Contacts</li>
+    </ul>
+  </nav>
 
   <body>
 
